--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>UVA SDS GPT</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
   </head>
   <body>
     <header>
